--- a/dex/css/pokedex-enhancements.css
+++ b/dex/css/pokedex-enhancements.css
@@ -99,7 +99,7 @@
 .gen-tab-button[data-generation="1"] { --dynamic-color: #f87171; --dynamic-border-color: #f87171; }
 .gen-tab-button[data-generation="2"] { --dynamic-color: #fbbf24; --dynamic-border-color: #fbbf24; }
 .gen-tab-button[data-generation="3"] { --dynamic-color: #4ade80; --dynamic-border-color: #4ade80; }
-.gen-tab-button[data-generation="4"] { --dynamic-color: #60a5fa; --dynamic-border-color: #60a5fa; }
+.gen-tab-button[data-generation="4"] { --dynamic-color: #1173eb; --dynamic-border-color: #60a5fa; }
 .gen-tab-button[data-generation="5"] { --dynamic-color: #a855f7; --dynamic-border-color: #a855f7; }
 .gen-tab-button[data-generation="6"] { --dynamic-color: #ec4899; --dynamic-border-color: #ec4899; }
 .gen-tab-button[data-generation="7"] { --dynamic-color: #f97316; --dynamic-border-color: #f97316; }
